--- a/S-Dnevnik.html
+++ b/S-Dnevnik.html
@@ -5096,6 +5096,8 @@
     
     <div class="credit-watermark">Created by Blagoj Nasev</div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="home-button.js"></script>
 </body>
 </html>
+
 
